deploy/traffic-monitor.yaml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: traffic-monitor
  labels:
    app: traffic-monitor
spec:
  template:
    metadata:
      labels:
        app: traffic-monitor
    spec:
      hostNetwork: true
      containers:
      - name: traffic-monitor
        image: "luguoxiang/traffic-monitor"
        imagePullPolicy: Always
        command:
        - "./traffic-monitor"
        - "-alsologtostderr"
