deploy/prometheus.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: traffic-prometheus
  labels:
    app: traffic-prometheus
spec:
  template:
    metadata:
      labels:
        app: traffic-prometheus
    spec:
      containers:
      - name: traffic-prometheus
        image: prom/prometheus:v2.0.0
        args:
        - "--config.file=/etc/prometheus/conf/prometheus.yml"
        ports:
        - containerPort: 9090
          name: prometheus
        volumeMounts:
        - name: prometheus-config-volume
          mountPath: /etc/prometheus/conf/ 
      volumes:
      - name: prometheus-config-volume
        configMap:
          name: prometheus-configmap

---

apiVersion: v1
kind: Service
metadata:
  name: traffic-prometheus
  labels:
    app: traffic-prometheus
spec:
  type: ClusterIP
  selector:
    app: traffic-prometheus
  ports:
  - name: prometheus
    port: 9090
    targetPort: 9090
