deploy/vizceral.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: traffic-vizceral
  labels:
    app: traffic_vizceral
spec:
  template:
    metadata:
      labels:
        app: traffic_vizceral
    spec:
      containers:
      - name: traffic-vizceral
        image: "luguoxiang/traffic-vizceral:1.0"
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http

---

apiVersion: v1
kind: Service
metadata:
  name: traffic-vizceral
  labels:
    app: traffic_vizceral
spec:
  type: NodePort
  ports:
  - name: backend
    port: 8080
    targetPort: 8080
  selector:
    app: traffic_vizceral
